[gd_scene load_steps=16 format=4 uid="uid://dmxfdjf4ton2o"]

[ext_resource type="Script" path="res://scripts/game_window.gd" id="1_0rfml"]
[ext_resource type="Texture2D" uid="uid://dvug34kul3l13" path="res://assets/Background/Background.png" id="1_m0pxm"]
[ext_resource type="Texture2D" uid="uid://bvi2jiiwklq15" path="res://assets/UI/Top UI v 2.png" id="2_2yyvh"]
[ext_resource type="PackedScene" uid="uid://n43ef13rao3h" path="res://scenes/enemies/enemy.tscn" id="2_04xhg"]
[ext_resource type="Texture2D" uid="uid://cbd7sikanj1cn" path="res://assets/32rogues/tiles.png" id="2_kiygc"]
[ext_resource type="Texture2D" uid="uid://dtf12khg42w7x" path="res://assets/UI/Bottom UI v 2.png" id="3_mei5y"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="4_pskgn"]
[ext_resource type="PackedScene" uid="uid://coxtxpj8ay5h5" path="res://scenes/player.tscn" id="7_2hndj"]
[ext_resource type="Texture2D" uid="uid://c654t6di4xnp5" path="res://assets/32rogues/Shield.png" id="8_gvty1"]
[ext_resource type="FontFile" uid="uid://bt06rti8mm5ue" path="res://assets/GallaeciaForte.ttf" id="9_jw7cf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oglnb"]
texture = ExtResource("2_kiygc")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0

[sub_resource type="TileSet" id="TileSet_5mgtx"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_oglnb")

[sub_resource type="AtlasTexture" id="AtlasTexture_dvgcu"]
atlas = ExtResource("1_m0pxm")
region = Rect2(0, 373.953, 928, 419.047)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lk2h3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka8sp"]
bg_color = Color(0.679688, 0.0398254, 0.0398254, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameWindow" type="Node2D"]
script = ExtResource("1_0rfml")

[node name="DungeonTiles" type="TileMapLayer" parent="."]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAYAAAD6////AAAAAAEAAAD6/wAAAAAAAAEAAAD6/wEAAAABAAEAAAD6/wIAAAAAAAYAAAD6/wMAAAAAAAYAAAD6/wQAAAAAAAYAAAD6/wUAAAAAAAYAAAD6/wYAAAAAAAYAAAD6/wcAAAAAAAYAAAD7////AAAAAAEAAAD7/wAAAAAAAAEAAAD7/wEAAAABAAEAAAD7/wIAAAAAAAYAAAD7/wMAAAAAAAYAAAD7/wQAAAACAAcAAAD7/wUAAAAAAAYAAAD7/wcAAAAAAAYAAAD8////AAAAAAEAAAD8/wAAAAAAAAEAAAD8/wEAAAABAAEAAAD8/wIAAAAAAAYAAAD8/wMAAAAAAAYAAAD8/wQAAAAAAAYAAAD8/wUAAAACAAoAAAD8/wYAAAAAAAYAAAD8/wcAAAAAAAYAAAD9////AAAAAAEAAAD9/wAAAAAAAAEAAAD9/wEAAAABAAEAAAD9/wIAAAACAAcAAAD9/wMAAAAAAAYAAAD9/wQAAAAAAAYAAAD9/wUAAAAAAAYAAAD9/wYAAAAAAAYAAAD9/wcAAAAAAAYAAAD+////AAAAAAEAAAD+/wAAAAAAAAEAAAD+/wEAAAABAAEAAAD+/wIAAAAAAAYAAAD+/wMAAAAAAAYAAAD+/wQAAAAAAAYAAAD+/wUAAAAAAAYAAAD+/wYAAAAAAAYAAAD+/wcAAAAAAAYAAAD/////AAAAAAEAAAD//wAAAAAAAAEAAAD//wEAAAABAAEAAAD//wIAAAAAAAYAAAD//wMAAAADAAYAAAD//wQAAAAAAAYAAAD//wUAAAAAAAYAAAD//wYAAAAAAAYAAAD//wcAAAAAAAYAAAAAAP//AAAAAAEAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAEAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAYAAAAAAAQAAAAAAAYAAAAAAAUAAAAAAAYAAAAAAAYAAAAAAAYAAAAAAAcAAAAAAAYAAAABAP//AAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAABAAEAAAABAAIAAAAAAAYAAAABAAMAAAAAAAYAAAABAAQAAAACAAkAAAABAAUAAAAAAAYAAAABAAYAAAAAAAYAAAABAAcAAAAAAAYAAAACAP//AAAAAAEAAAACAAAAAAAAAAEAAAACAAEAAAABAAEAAAACAAIAAAAAAAYAAAACAAMAAAAAAAYAAAACAAQAAAAAAAYAAAACAAUAAAAAAAYAAAACAAYAAAAAAAYAAAACAAcAAAAAAAYAAAADAP//AAAAAAEAAAADAAAAAAAAAAEAAAADAAEAAAABAAEAAAADAAIAAAADAAkAAAADAAMAAAAAAAYAAAADAAQAAAAAAAYAAAADAAUAAAADAAoAAAADAAYAAAAAAAYAAAADAAcAAAAAAAYAAAAEAP//AAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAABAAEAAAAEAAIAAAAAAAYAAAAEAAMAAAAAAAYAAAAEAAQAAAAAAAYAAAAEAAUAAAAAAAYAAAAEAAYAAAAAAAYAAAAEAAcAAAAAAAYAAAAFAP//AAAAAAEAAAAFAAAAAAAAAAEAAAAFAAEAAAABAAEAAAAFAAIAAAAAAAYAAAAFAAMAAAAAAAYAAAAFAAQAAAAAAAYAAAAFAAUAAAAAAAYAAAAFAAYAAAAAAAYAAAAFAAcAAAAAAAYAAAAGAP//AAAAAAEAAAAGAAAAAAAAAAEAAAAGAAEAAAABAAEAAAAGAAIAAAAAAAYAAAAGAAMAAAAAAAYAAAAGAAQAAAAAAAYAAAAGAAUAAAAAAAYAAAAGAAYAAAAAAAYAAAAGAAcAAAAAAAYAAAAHAP//AAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAABAAEAAAAHAAIAAAACAAcAAAAHAAMAAAAAAAYAAAAHAAQAAAADAAYAAAAHAAUAAAAAAAYAAAAHAAYAAAAAAAYAAAAHAAcAAAAAAAYAAAAIAP//AAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAABAAEAAAAIAAIAAAAAAAYAAAAIAAMAAAAAAAYAAAAIAAQAAAAAAAYAAAAIAAUAAAAAAAYAAAAIAAYAAAAAAAYAAAAIAAcAAAAAAAYAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="DungeonTiles"]
tile_map_data = PackedByteArray("AAD9/wEAAAAGABAAAAAEAAIAAAAHABAAAAD//wIAAAAEABEAAAD//wUAAAABABYAAAACAAMAAAAAABQAAAADAAQAAAABABUAAAD8/wMAAAAAABUAAAABAAYAAAAKABMAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="Player" parent="." instance=ExtResource("7_2hndj")]
z_index = 1
position = Vector2(-282, 735)

[node name="Enemy" parent="." instance=ExtResource("2_04xhg")]
z_index = 1
position = Vector2(921, 735)

[node name="Background" type="TextureRect" parent="."]
visible = false
offset_left = -755.0
offset_top = -65.0
offset_right = 1353.0
offset_bottom = 1103.0
texture = SubResource("AtlasTexture_dvgcu")

[node name="GamePanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.905882)
offset_right = 576.0
offset_bottom = 1024.0

[node name="TopUI" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_2yyvh")

[node name="BottomUI" type="TextureRect" parent="."]
visible = false
offset_top = 928.0
offset_right = 576.0
offset_bottom = 1020.0
texture = ExtResource("3_mei5y")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("4_pskgn")
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 5

[node name="DestroyTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="CollapseTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="RefillTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(288, 512)

[node name="PlayerHealth" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = 990.0
offset_right = -283.0
offset_bottom = 1007.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_lk2h3")
theme_override_styles/fill = SubResource("StyleBoxFlat_ka8sp")
value = 50.0
show_percentage = false

[node name="PlayerHealthLabel" type="Label" parent="PlayerHealth"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -11.5
offset_right = 14.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="PlayerShield" type="Sprite2D" parent="PlayerHealth"]
unique_name_in_owner = true
position = Vector2(178.667, 8)
scale = Vector2(1.2, 1.2)
texture = ExtResource("8_gvty1")

[node name="PlayerShieldLabel" type="Label" parent="PlayerHealth/PlayerShield"]
unique_name_in_owner = true
offset_left = -7.22251
offset_top = -12.0833
offset_right = 11.7775
offset_bottom = 10.9167
scale = Vector2(0.8, 0.8)
text = "20"
horizontal_alignment = 1

[node name="EnemyHealth" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 750.0
offset_top = 990.0
offset_right = 917.0
offset_bottom = 1007.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_lk2h3")
theme_override_styles/fill = SubResource("StyleBoxFlat_ka8sp")
value = 50.0
show_percentage = false

[node name="EnemyHealthLabel" type="Label" parent="EnemyHealth"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -11.5
offset_right = 14.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="EnemyShield" type="Sprite2D" parent="EnemyHealth"]
unique_name_in_owner = true
position = Vector2(178.667, 8)
scale = Vector2(1.2, 1.2)
texture = ExtResource("8_gvty1")

[node name="EnemyShieldLabel" type="Label" parent="EnemyHealth/EnemyShield"]
unique_name_in_owner = true
offset_left = -7.22251
offset_top = -12.0833
offset_right = 11.7775
offset_bottom = 10.9167
scale = Vector2(0.8, 0.8)
text = "20"
horizontal_alignment = 1

[node name="Resolution" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
offset_left = -876.0
offset_top = -105.0
offset_right = 1459.0
offset_bottom = 1143.0

[node name="ResolutionText" type="Label" parent="Resolution"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("9_jw7cf")
theme_override_font_sizes/font_size = 60
text = "You Died!"

[node name="Inventory" type="Node2D" parent="."]
position = Vector2(-337, 9)

[node name="InventoryGrid" type="HBoxContainer" parent="Inventory"]
offset_left = -305.0
offset_top = 16.0
offset_right = -33.0
offset_bottom = 101.0
theme_override_constants/separation = 1
alignment = 1

[node name="Button" type="Button" parent="Inventory/InventoryGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="Button2" type="Button" parent="Inventory/InventoryGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="Button3" type="Button" parent="Inventory/InventoryGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="Counters" type="Node2D" parent="."]
position = Vector2(873, 14)

[node name="XPCounter" type="Label" parent="Counters"]
unique_name_in_owner = true
offset_left = -632.0
offset_top = 2.0
offset_right = -542.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 30
text = "XP: 0"

[node name="CoinsCounter" type="Label" parent="Counters"]
unique_name_in_owner = true
offset_left = -632.0
offset_top = 41.0
offset_right = -519.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 30
text = "Coins: 0"

[connection signal="timeout" from="DestroyTimer" to="Grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="CollapseTimer" to="Grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="RefillTimer" to="Grid" method="_on_refill_timer_timeout"]
